Fix illu svg gaps

--- a/app/assets/styles/home/_global.scss
+++ b/app/assets/styles/home/_global.scss
@@ -4,7 +4,7 @@
 
 .inpage--home {
   @extend .antialiased;
-  background: shade($primary-color, 20%) url('../graphics/layout/home-illu_home.svg') top right no-repeat;
+  background: shade($primary-color, 20%) url('../graphics/layout/home-illu.svg') top right no-repeat;
   background-size: cover;
   color: #fff;
 
